--- a/homeStyle.css
+++ b/homeStyle.css
@@ -38,6 +38,19 @@ body {
     background-color: #EEE5E5;
 }
 
+#contentContainer {
+    width: 70%;
+    height: 100%;
+    position: absolute;
+    top: 200px;
+    left: 200px;
+    right: 200px;
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px 8px #888888;
+    background-color: white;
+}
+
 #topMenuList {
     position: relative;
     left: 100px;
