--- a/homeStyle.css
+++ b/homeStyle.css
@@ -36,6 +36,7 @@ body {
     height: 40px;
     width: 40px;
     background-color: #EEE5E5;
+    cursor:pointer;
 }
 
 #topMenuList {
@@ -61,7 +62,7 @@ body {
     display:inline-block;
 }
 
-#profileImage_content {
+.dropdown_content {
     display: none;
     position: absolute;
     top: 40px;
@@ -70,7 +71,10 @@ body {
     width: 40px;
     margin: 0;
     z-index: 1;
-}
+ }
+
+ .show {display:block;}
+ 
 #profileImage_content li {
     color: black;
     padding: 10px 10px;
@@ -84,10 +88,6 @@ body {
 
 #profileImage_content li:hover {
     background-color: #ddd;
-}
-
-#dropdown:hover #profileImage_content {
-    display:block;
 }
 
 #dropdown:hover #profileImage {
