--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -86,7 +86,9 @@ body {
     z-index: 1;
  }
 
- .show {display:block;}
+.show {
+    display:block;
+}
  
 #profileImage_content li {
     color: black;
