--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -36,7 +36,7 @@ body {
     height: 40px;
     width: 40px;
     background-color: #EEE5E5;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 #contentContainer {
@@ -73,7 +73,7 @@ body {
 }
 
 #dropdown {
-    display:inline-block;
+    display: inline-block;
 }
 
 .dropdown_content {
@@ -85,12 +85,12 @@ body {
     width: 40px;
     margin: 0;
     z-index: 1;
- }
+}
 
 .show {
-    display:block;
+    display: block;
 }
- 
+
 #profileImage_content li {
     color: black;
     padding: 10px 10px;
@@ -99,7 +99,7 @@ body {
     display: block;
     background-color: #f1f1f1;
     min-width: 80px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 #profileImage_content li:hover {
@@ -113,41 +113,46 @@ body {
 #logo {
     color: white;
     text-decoration: none;
-    margin:20px;
-    font-size:30px;
-    padding-top:10px;
+    margin: 20px;
+    font-size: 30px;
+    padding-top: 10px;
     padding-left: 25px;
 }
-  
+
 #sidebar {
-    position:fixed;
+    position: fixed;
     list-style-type: none;
-    margin:0px;
-    top:0;     
-    width: 200px;   
+    margin: 0px;
+    top: 0;
+    width: 200px;
     height: 100%;
     background: #3962ad;
     padding: 0px;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
-    opacity:0.9;
+    opacity: 0.9;
 }
-  
+
 #sidebar li {
     display: inline;
     color: white;
-    margin:20px;
+    margin: 20px;
     font-size: 25px;
     list-style-type: none;
 }
-  
-#sidebar li a{
-    display:block;
+
+#sidebar li a {
+    display: block;
     color: white;
     text-decoration: none;
     padding: 6px 8px 6px 25px;
 }
 
-#sidebar li a:hover{
+#sidebar li a:hover {
     color: rgb(8, 70, 112);
+}
+
+#userProfileHtml {
+    width: 100%;
+    height: 100%;
 }
