--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -156,3 +156,106 @@ body {
     width: 100%;
     height: 100%;
 }
+
+#loginModal {
+    display: none;
+    z-index: 10;
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 50px;
+    right: 100px;
+    background: #FFFFFF;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#loginFormContainer {
+    position: absolute;
+    top: 80px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#loginForm {
+    display: inline-block;
+    padding: 0 0;
+}
+
+#emailInput {
+    width: 260px;
+    height: 48px;
+    margin: 4px;
+
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+#passwordInput {
+    width: 260px;
+    height: 48px;
+    margin: 4px;
+
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+#cancelLoginButton {
+    position: absolute;
+    display: inline;
+
+    right: 60px;
+    bottom: 10px;
+    background: none;
+    border: none;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 23px;
+
+    color: #FF0000;
+}
+
+#requestLoginButton {
+    position: absolute;
+    display: inline;
+
+    background: none;
+    border: none;
+
+    right: 10px;
+    bottom: 10px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 20px;
+    line-height: 23px;
+
+    color: #509CE2;
+}
+
+
+.loginFadeIn {
+    animation-name: opacityOn;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes opacityOn {
+    from {opacity: 0.0;}
+    to {opacity: 1.0;}
+}
+
+.loginFadeOut {
+    animation-name: opacityOff;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes opacityOff {
+    from {opacity: 1.0;}
+    to {opacity: 0.0;}
+}
