--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -185,7 +185,6 @@ body {
     width: 260px;
     height: 48px;
     margin: 4px;
-
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 4px;
@@ -195,48 +194,40 @@ body {
     width: 260px;
     height: 48px;
     margin: 4px;
-
     border: 2px solid #000000;
     box-sizing: border-box;
     border-radius: 4px;
 }
+
 #cancelLoginButton {
     position: absolute;
     display: inline;
-
-    right: 60px;
+    right: 80px;
     bottom: 10px;
     background: none;
     border: none;
-
     font-family: Roboto;
     font-style: normal;
     font-weight: 300;
     font-size: 20px;
     line-height: 23px;
-
     color: #FF0000;
 }
 
 #requestLoginButton {
     position: absolute;
     display: inline;
-
     background: none;
     border: none;
-
     right: 10px;
     bottom: 10px;
-
     font-family: Roboto;
     font-style: normal;
     font-weight: 200;
     font-size: 20px;
     line-height: 23px;
-
     color: #509CE2;
 }
-
 
 .loginFadeIn {
     animation-name: opacityOn;
@@ -245,8 +236,12 @@ body {
 }
 
 @keyframes opacityOn {
-    from {opacity: 0.0;}
-    to {opacity: 1.0;}
+    from {
+        opacity: 0.0;
+    }
+    to {
+        opacity: 1.0;
+    }
 }
 
 .loginFadeOut {
@@ -256,6 +251,30 @@ body {
 }
 
 @keyframes opacityOff {
-    from {opacity: 1.0;}
-    to {opacity: 0.0;}
+    from {
+        opacity: 1.0;
+    }
+    to {
+        opacity: 0.0;
+    }
+}
+
+#loginModalProgress {
+    margin: auto;
+    visibility: hidden;
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
