--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -52,6 +52,11 @@ body {
     background-color: white;
 }
 
+.fit-screen-size {
+    width:100%;
+    height:100%;
+}
+
 #topMenuList {
     position: relative;
     left: 200px;
